--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             min-height: 100vh;
             overflow: auto;
-            background-color: #ffffff;
+            background-color: #fedfe6;
             padding: 10px;
         }
         
