--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katalog Greeting Card - Hadiah Spesial</title>
+    <title>Katalog Website - Hadiah Spesial</title>
     <style>
         /* CSS Reset */
         * {
@@ -273,7 +273,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Greeting Cards</div>
+        <div class="logo">Flomma Flower</div>
         <div class="tagline">Ungkapkan Perasaan dengan Kartu Spesial</div>
     </header>
 
@@ -288,21 +288,21 @@
     </nav>
 
     <div class="container">
-        <h1 class="page-title">Katalog Greeting Card</h1>
+        <h1 class="page-title">Greeting Card</h1>
 
         <div class="products-grid">
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,1" alt="Greeting Card 1">
+                    <img src="gambar/contoh1.png" alt="Greeting Card 1">
                     <span class="product-badge">Terlaris</span>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Happy Birthday Floral</h3>
-                    <p class="product-description">Kartu ucapan ulang tahun dengan desain bunga yang elegan dan warna-warni.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <h3 class="product-title">Pastel Color</h3>
+                    <p class="product-description">Kartu ucapan lucu dengan warna-warna pastel.</p>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
-                        <a href="card.html" class="btn btn-beige">Preview</a>
+                        <a href="pastel.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -311,14 +311,14 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,2" alt="Greeting Card 2">
+                    <img src="gambar/contoh2.png" alt="Greeting Card 2">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Thank You Minimalist</h3>
-                    <p class="product-description">Kartu ucapan terima kasih dengan desain minimalis yang modern dan elegan.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <h3 class="product-title">Black & White</h3>
+                    <p class="product-description">Kartu ucapan dengan desain minimalis yang modern dan elegan.</p>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
-                        <a href="preview2.html" class="btn btn-beige">Preview</a>
+                        <a href="bnw.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -327,15 +327,15 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,3" alt="Greeting Card 3">
+                    <img src="gambar/contoh4.png" alt="Greeting Card 3">
                     <span class="product-badge">Baru</span>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Congratulations Gold</h3>
-                    <p class="product-description">Kartu ucapan selamat dengan sentuhan emas yang mewah dan berkelas.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <h3 class="product-title">Gift Box</h3>
+                    <p class="product-description">Hadiah ucapan selamat untuk merayakan kegembiraan dengan sebuah lagu .</p>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
-                        <a href="preview3.html" class="btn btn-beige">Preview</a>
+                        <a href="gift.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -344,14 +344,15 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,4" alt="Greeting Card 4">
+                    <img src="gambar/contoh3.png" alt="Greeting Card 4">
+                    <span class="product-badge">Terlaris</span>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Love Letter Vintage</h3>
-                    <p class="product-description">Kartu ucapan cinta dengan desain vintage yang romantis dan timeless.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <h3 class="product-title">Graduation</h3>
+                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
-                        <a href="preview4.html" class="btn btn-beige">Preview</a>
+                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -360,14 +361,14 @@
             <!-- Product 5 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,5" alt="Greeting Card 5">
+                    <img src="gambar/contoh5.png" alt="Greeting Card 5">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Get Well Soon</h3>
-                    <p class="product-description">Kartu ucapan semoga cepat sembuh dengan desain yang menyentuh hati.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <h3 class="product-title">Envelope</h3>
+                    <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
-                        <a href="preview5.html" class="btn btn-beige">Preview</a>
+                        <a href="envelope.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -377,12 +378,12 @@
             <div class="product-card">
                 <div class="product-image">
                     <img src="https://source.unsplash.com/random/400x300/?greeting-card,6" alt="Greeting Card 6">
-                    <span class="product-badge">Diskon</span>
+                    <span class="product-badge">Coming Soon</span>
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Wedding Invitation</h3>
                     <p class="product-description">Kartu undangan pernikahan dengan desain elegan dan kemasan premium.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <div class="product-price">Rp ??.000</div>
                     <div class="product-actions">
                         <a href="preview6.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -392,21 +393,21 @@
         </div>
     </div>
     <div class="container">
-        <h1 class="page-title">Katalog Greeting Card</h1>
+        <h1 class="page-title">Add On</h1>
 
         <div class="products-grid">
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,1" alt="Greeting Card 1">
+                    <img src="gambar/contoh3.png" alt="Greeting Card 1">
                     <span class="product-badge">Terlaris</span>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Happy Birthday Floral</h3>
-                    <p class="product-description">Kartu ucapan ulang tahun dengan desain bunga yang elegan dan warna-warni.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <h3 class="product-title">Graduation</h3>
+                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
-                        <a href="card.html" class="btn btn-beige">Preview</a>
+                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -499,8 +500,8 @@
 
     <footer>
         <div class="footer-content">
-            <h3>Greeting Cards Shop</h3>
-            <p>Temukan kartu ucapan sempurna untuk setiap momen spesial dalam hidup Anda.</p>
+            <h3>Flomma Flower</h3>
+            <p>Spread Your Love With Flomma.</p>
             
             <div class="social-links">
                 <a href="#"><i class="fab fa-instagram"></i></a>
