--- a/gift.html
+++ b/gift.html
@@ -17,7 +17,7 @@
         }
         
         body {
-            font-family: 'Comic Sans MS', cursive;
+            font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
             background-color: #ffebee;
             display: flex;
             flex-direction: column;
