--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="gambar/logo.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="gambar/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katalog Website - Hadiah Spesial</title>
     <style>
@@ -300,7 +302,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Pastel Color</h3>
                     <p class="product-description">Kartu ucapan lucu dengan warna-warna pastel.</p>
-                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="pastel.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -316,7 +318,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Black & White</h3>
                     <p class="product-description">Kartu ucapan dengan desain minimalis yang modern dan elegan.</p>
-                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="bnw.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -333,7 +335,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Gift Box</h3>
                     <p class="product-description">Hadiah ucapan selamat untuk merayakan kegembiraan dengan sebuah lagu .</p>
-                    <div class="product-price">Rp 15.000</div>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
                         <a href="gift.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -366,7 +368,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Envelope</h3>
                     <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
-                    <div class="product-price">Rp 15.000</div>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
                         <a href="envelope.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -403,11 +405,11 @@
                     <span class="product-badge">Terlaris</span>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Graduation</h3>
+                    <h3 class="product-title">Slider Gallery</h3>
                     <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
-                    <div class="product-price">Rp 15.000</div>
+                    <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
-                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
+                        <a href="slider.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -419,11 +421,11 @@
                     <img src="https://source.unsplash.com/random/400x300/?greeting-card,2" alt="Greeting Card 2">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Thank You Minimalist</h3>
+                    <h3 class="product-title">Grid Gallery</h3>
                     <p class="product-description">Kartu ucapan terima kasih dengan desain minimalis yang modern dan elegan.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
-                        <a href="preview2.html" class="btn btn-beige">Preview</a>
+                        <a href="grid.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -436,11 +438,11 @@
                     <span class="product-badge">Baru</span>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Congratulations Gold</h3>
+                    <h3 class="product-title">Masonry Gallery</h3>
                     <p class="product-description">Kartu ucapan selamat dengan sentuhan emas yang mewah dan berkelas.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
-                        <a href="preview3.html" class="btn btn-beige">Preview</a>
+                        <a href="masonry.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -453,11 +455,11 @@
                     <img src="https://source.unsplash.com/random/400x300/?greeting-card,4" alt="Greeting Card 4">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Love Letter Vintage</h3>
+                    <h3 class="product-title">Carousel Gallery</h3>
                     <p class="product-description">Kartu ucapan cinta dengan desain vintage yang romantis dan timeless.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
-                        <a href="preview4.html" class="btn btn-beige">Preview</a>
+                        <a href="carousel.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -469,11 +471,11 @@
                     <img src="https://source.unsplash.com/random/400x300/?greeting-card,5" alt="Greeting Card 5">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Get Well Soon</h3>
+                    <h3 class="product-title">Interactive Gallery</h3>
                     <p class="product-description">Kartu ucapan semoga cepat sembuh dengan desain yang menyentuh hati.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
-                        <a href="preview5.html" class="btn btn-beige">Preview</a>
+                        <a href="interactive.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
