--- a/grid.html
+++ b/grid.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Gallery</title>
     <style>
+
+        :root {
+            --pastel-pink: #ffd6e0;
+            --pastel-mint: #c1f0d2;
+            --pastel-lavender: #d4c4fb;
+            --pastel-peach: #ffdac1;
+            --pastel-blue: #b5ead7;
+            --soft-gray: #f8f9fa;
+            --text-dark: #333333;
+            --text-light: #5a5a5a;
+        }
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: var(--pastel-pink);
         }
         .gallery-container {
             max-width: 1200px;
@@ -121,35 +132,35 @@
         <h1>Grid Gallery</h1>
         <div class="grid-gallery">
             <div class="grid-item">
-                <img src="https://source.unsplash.com/random/600x600?city,1" alt="City 1">
+                <img src="gambar/rs1.jpg" alt="City 1">
                 <div class="grid-caption">Urban Landscape</div>
             </div>
             <div class="grid-item">
-                <img src="https://source.unsplash.com/random/600x600?city,2" alt="City 2">
+                <img src="gambar/rsantarahidupdanmati.jpg" alt="City 2">
                 <div class="grid-caption">Downtown Skyline</div>
             </div>
             <div class="grid-item">
-                <img src="https://source.unsplash.com/random/600x600?city,3" alt="City 3">
+                <img src="gambar/rsboschbrand.jpg" alt="City 3">
                 <div class="grid-caption">Night Lights</div>
             </div>
             <div class="grid-item">
-                <img src="https://source.unsplash.com/random/600x600?city,4" alt="City 4">
+                <img src="gambar/rsboschbrand.jpg" alt="City 4">
                 <div class="grid-caption">Modern Architecture</div>
             </div>
             <div class="grid-item">
-                <img src="https://source.unsplash.com/random/600x600?city,5" alt="City 5">
+                <img src="gambar/rswildanimal.jpg" alt="City 5">
                 <div class="grid-caption">Street View</div>
             </div>
             <div class="grid-item">
-                <img src="https://source.unsplash.com/random/600x600?city,6" alt="City 6">
+                <img src="gambar/starry.jpg" alt="City 6">
                 <div class="grid-caption">Public Park</div>
             </div>
             <div class="grid-item">
-                <img src="https://source.unsplash.com/random/600x600?city,7" alt="City 7">
+                <img src="gambar/mbah.jpg" alt="City 7">
                 <div class="grid-caption">Historical Building</div>
             </div>
             <div class="grid-item">
-                <img src="https://source.unsplash.com/random/600x600?city,8" alt="City 8">
+                <img src="gambar/sol.jpg" alt="City 8">
                 <div class="grid-caption">Bridge Crossing</div>
             </div>
         </div>
