--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <div class="tagline">Ungkapkan Perasaan dengan Kartu Spesial</div>
     </header>
 
-    <nav>
+    <!-- <nav>
         <ul>
             <li><a href="#">Beranda</a></li>
             <li><a href="#">Katalog</a></li>
@@ -287,7 +287,7 @@
             <li><a href="#">Tentang Kami</a></li>
             <li><a href="#">Kontak</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
     <div class="container">
         <h1 class="page-title">Greeting Card</h1>
@@ -379,15 +379,14 @@
             <!-- Product 6 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,6" alt="Greeting Card 6">
-                    <span class="product-badge">Coming Soon</span>
+                    <img src="gambar/contoh6.png" alt="Greeting Card 6">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Wedding Invitation</h3>
-                    <p class="product-description">Kartu undangan pernikahan dengan desain elegan dan kemasan premium.</p>
-                    <div class="product-price">Rp ??.000</div>
+                    <h3 class="product-title">Gold</h3>
+                    <p class="product-description">Kartu ucapan dengan desain elegan dan kemasan premium.</p>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
-                        <a href="preview6.html" class="btn btn-beige">Preview</a>
+                        <a href="gold.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
@@ -401,12 +400,12 @@
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="gambar/contoh3.png" alt="Greeting Card 1">
+                    <img src="gambar/contohslider.png" alt="Greeting Card 1">
                     <span class="product-badge">Terlaris</span>
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Slider Gallery</h3>
-                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
+                    <p class="product-description">Tampilkan gambar satu-persatu dengan transisi memikat.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="slider.html" class="btn btn-beige">Preview</a>
@@ -418,11 +417,11 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,2" alt="Greeting Card 2">
+                    <img src="gambar/contohgrid.png" alt="Greeting Card 2">
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Grid Gallery</h3>
-                    <p class="product-description">Kartu ucapan terima kasih dengan desain minimalis yang modern dan elegan.</p>
+                    <p class="product-description">Tata letak simetris, tampilan rapi dan elegan.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="grid.html" class="btn btn-beige">Preview</a>
@@ -434,12 +433,12 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,3" alt="Greeting Card 3">
+                    <img src="gambar/contohmasonry.png" alt="Greeting Card 3">
                     <span class="product-badge">Baru</span>
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Masonry Gallery</h3>
-                    <p class="product-description">Kartu ucapan selamat dengan sentuhan emas yang mewah dan berkelas.</p>
+                    <p class="product-description">Gaya bebas tersusun artistik, tak beraturan indah.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="masonry.html" class="btn btn-beige">Preview</a>
@@ -452,11 +451,11 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,4" alt="Greeting Card 4">
+                    <img src="gambar/contohcarousel.png" alt="Greeting Card 4">
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Carousel Gallery</h3>
-                    <p class="product-description">Kartu ucapan cinta dengan desain vintage yang romantis dan timeless.</p>
+                    <p class="product-description">Gambar bergeser dinamis seperti panggung kereta.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="carousel.html" class="btn btn-beige">Preview</a>
@@ -468,11 +467,11 @@
             <!-- Product 5 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://source.unsplash.com/random/400x300/?greeting-card,5" alt="Greeting Card 5">
+                    <img src="gambar/contohinteractive.png" alt="Greeting Card 5">
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Interactive Gallery</h3>
-                    <p class="product-description">Kartu ucapan semoga cepat sembuh dengan desain yang menyentuh hati.</p>
+                    <p class="product-description">Dapat melihat preview foto dengan deskripsi.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="interactive.html" class="btn btn-beige">Preview</a>
@@ -482,7 +481,7 @@
             </div>
 
             <!-- Product 6 -->
-            <div class="product-card">
+            <!-- <div class="product-card">
                 <div class="product-image">
                     <img src="https://source.unsplash.com/random/400x300/?greeting-card,6" alt="Greeting Card 6">
                     <span class="product-badge">Diskon</span>
@@ -496,7 +495,7 @@
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -506,13 +505,13 @@
             <p>Spread Your Love With Flomma.</p>
             
             <div class="social-links">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-tiktok"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/flomma.flower?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/@flomma.flower?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok"></i></a>
+                <a href="https://g.co/kgs/PgCNJYo"><i class="fa fa-map-marker"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </div>
             
-            <p class="copyright">&copy; 2023 Greeting Cards Shop. All Rights Reserved.</p>
+            <p class="copyright">&copy; 2025 FLomma Flower. All Rights Reserved.</p>
         </div>
     </footer>
 
