--- a/interactive.html
+++ b/interactive.html
@@ -152,7 +152,7 @@
         <h1>Interactive Gallery</h1>
         <div class="interactive-gallery">
             <div class="interactive-item" data-caption="Sunset over the mountains" data-description="A breathtaking view of the sun setting behind snow-capped peaks.">
-                <img src="https://source.unsplash.com/random/600x400?landscape,1" alt="Landscape 1">
+                <img src="gambar/starry.jpg" alt="Landscape 1">
                 <div class="interactive-overlay">
                     <h3>Mountain Sunset</h3>
                     <p>Click to view full image</p>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="interactive-item" data-caption="Ocean waves at dawn" data-description="The first light of day illuminates the powerful ocean waves.">
-                <img src="https://source.unsplash.com/random/600x400?landscape,2" alt="Landscape 2">
+                <img src="gambar/rsantarahidupdanmati.jpg" alt="Landscape 2">
                 <div class="interactive-overlay">
                     <h3>Ocean Dawn</h3>
                     <p>Click to view full image</p>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="interactive-item" data-caption="Forest path in autumn" data-description="A peaceful walk through the colorful autumn forest.">
-                <img src="https://source.unsplash.com/random/600x400?landscape,3" alt="Landscape 3">
+                <img src="gambar/rsboschbrand.jpg" alt="Landscape 3">
                 <div class="interactive-overlay">
                     <h3>Autumn Forest</h3>
                     <p>Click to view full image</p>
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <div class="interactive-item" data-caption="Desert dunes at noon" data-description="The endless sea of sand under the bright desert sun.">
-                <img src="https://source.unsplash.com/random/600x400?landscape,4" alt="Landscape 4">
+                <img src="gambar/rswildanimal.jpg" alt="Landscape 4">
                 <div class="interactive-overlay">
                     <h3>Desert Dunes</h3>
                     <p>Click to view full image</p>
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <div class="interactive-item" data-caption="Waterfall in the jungle" data-description="Lush greenery surrounds this majestic waterfall.">
-                <img src="https://source.unsplash.com/random/600x400?landscape,5" alt="Landscape 5">
+                <img src="gambar/sol.jpg" alt="Landscape 5">
                 <div class="interactive-overlay">
                     <h3>Jungle Waterfall</h3>
                     <p>Click to view full image</p>
@@ -192,7 +192,7 @@
                 </div>
             </div>
             <div class="interactive-item" data-caption="Northern lights display" data-description="The magical dance of aurora borealis in the night sky.">
-                <img src="https://source.unsplash.com/random/600x400?landscape,6" alt="Landscape 6">
+                <img src="gambar/rs1.jpg" alt="Landscape 6">
                 <div class="interactive-overlay">
                     <h3>Northern Lights</h3>
                     <p>Click to view full image</p>
