--- a/masonry.html
+++ b/masonry.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masonry Gallery</title>
     <style>
+
+        :root {
+            --pastel-pink: #ffd6e0;
+            --pastel-mint: #c1f0d2;
+            --pastel-lavender: #d4c4fb;
+            --pastel-peach: #ffdac1;
+            --pastel-blue: #b5ead7;
+            --soft-gray: #f8f9fa;
+            --text-dark: #333333;
+            --text-light: #5a5a5a;
+        }
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: var(--pastel-pink);
         }
         .gallery-container {
             max-width: 1200px;
@@ -138,19 +149,19 @@
                 <div class="masonry-caption">Street Art</div>
             </div>
             <div class="masonry-item">
-                <img src="https://source.unsplash.com/random/600x900?art,5" alt="Art 5">
+                <img src="gambar/rs1.jpg" alt="Art 5">
                 <div class="masonry-caption">Digital Artwork</div>
             </div>
             <div class="masonry-item">
-                <img src="https://source.unsplash.com/random/600x400?art,6" alt="Art 6">
+                <img src="gambar/rsboschbrand.jpg" alt="Art 6">
                 <div class="masonry-caption">Watercolor Painting</div>
             </div>
             <div class="masonry-item">
-                <img src="https://source.unsplash.com/random/600x750?art,7" alt="Art 7">
+                <img src="gambar/mbah.jpg" alt="Art 7">
                 <div class="masonry-caption">Photography Exhibit</div>
             </div>
             <div class="masonry-item">
-                <img src="https://source.unsplash.com/random/600x550?art,8" alt="Art 8">
+                <img src="gambar/sol.jpg" alt="Art 8">
                 <div class="masonry-caption">Mixed Media</div>
             </div>
         </div>
