--- a/slider.html
+++ b/slider.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider Gallery</title>
     <style>
+
+        :root { 
+            --pastel-pink: #ffd6e0;
+            --pastel-mint: #c1f0d2;
+            --pastel-lavender: #d4c4fb;
+            --pastel-peach: #ffdac1;
+            --pastel-blue: #b5ead7;
+            --soft-gray: #f8f9fa;
+            --text-dark: #333333;
+            --text-light: #5a5a5a;
+        }
+
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: var(--pastel-pink);
         }
         .gallery-container {
             max-width: 1200px;
@@ -93,19 +105,19 @@
         <h1>Slider Gallery</h1>
         <div class="slider">
             <div class="slide active">
-                <img src="https://source.unsplash.com/random/1200x600?nature,1" alt="Nature 1">
+                <img src="gambar/rs1.jpg" alt="Nature 1">
                 <div class="slide-caption">Beautiful Nature Landscape</div>
             </div>
             <div class="slide">
-                <img src="https://source.unsplash.com/random/1200x600?nature,2" alt="Nature 2">
+                <img src="gambar/rsantarahidupdanmati.jpg" alt="Nature 2">
                 <div class="slide-caption">Mountain View at Sunset</div>
             </div>
             <div class="slide">
-                <img src="https://source.unsplash.com/random/1200x600?nature,3" alt="Nature 3">
+                <img src="gambar/rsboschbrand.jpg" alt="Nature 3">
                 <div class="slide-caption">Peaceful Forest Path</div>
             </div>
             <div class="slide">
-                <img src="https://source.unsplash.com/random/1200x600?nature,4" alt="Nature 4">
+                <img src="gambar/rswildanimal.jpg" alt="Nature 4">
                 <div class="slide-caption">Ocean Waves Crashing</div>
             </div>
         </div>
