--- a/carousel.html
+++ b/carousel.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel Gallery</title>
     <style>
+
+        :root {
+            --pastel-pink: #ffd6e0;
+            --pastel-mint: #c1f0d2;
+            --pastel-lavender: #d4c4fb;
+            --pastel-peach: #ffdac1;
+            --pastel-blue: #b5ead7;
+            --soft-gray: #f8f9fa;
+            --text-dark: #333333;
+            --text-light: #5a5a5a;
+        }
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: var(--pastel-pink);
         }
         .gallery-container {
             max-width: 1200px;
@@ -118,20 +129,36 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://source.unsplash.com/random/800x500?animal,1" alt="Animal 1">
-                    <div class="carousel-caption">Wildlife Photography</div>
+                    <img src="gambar/rs1.jpg" alt="Animal 1">
+                    <div class="carousel-caption">Penangkapan Pangeran Diponegoro</div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/random/800x500?animal,2" alt="Animal 2">
-                    <div class="carousel-caption">Jungle Adventure</div>
+                    <img src="gambar/rsantarahidupdanmati.jpg" alt="Animal 2">
+                    <div class="carousel-caption">Antara Hidup dan Mati</div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/random/800x500?animal,3" alt="Animal 3">
-                    <div class="carousel-caption">Ocean Creatures</div>
+                    <img src="gambar/rsboschbrand.jpg" alt="Animal 3">
+                    <div class="carousel-caption">Boschbrand</div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/random/800x500?animal,4" alt="Animal 4">
-                    <div class="carousel-caption">Bird Watching</div>
+                    <img src="gambar/rswildanimal.jpg" alt="Animal 4">
+                    <div class="carousel-caption">Wild Animal</div>
+                </div>
+                <div class="carousel-item">
+                    <img src="gambar/rs1.jpg" alt="Animal 1">
+                    <div class="carousel-caption">Penangkapan Pangeran Diponegoro</div>
+                </div>
+                <div class="carousel-item">
+                    <img src="gambar/rsantarahidupdanmati.jpg" alt="Animal 2">
+                    <div class="carousel-caption">Antara Hidup dan Mati</div>
+                </div>
+                <div class="carousel-item">
+                    <img src="gambar/rsboschbrand.jpg" alt="Animal 3">
+                    <div class="carousel-caption">Boschbrand</div>
+                </div>
+                <div class="carousel-item">
+                    <img src="gambar/rswildanimal.jpg" alt="Animal 4">
+                    <div class="carousel-caption">Wild Animal</div>
                 </div>
             </div>
             <button class="carousel-control prev">&#10094;</button>
@@ -139,6 +166,10 @@
         </div>
         <div class="carousel-indicators">
             <div class="indicator active"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
             <div class="indicator"></div>
             <div class="indicator"></div>
             <div class="indicator"></div>
